hardcoded alignement issues with sidebar [fix this if causes more issues later]

--- a/src/test/core.css
+++ b/src/test/core.css
@@ -486,6 +486,13 @@ body {
   font-size: medium;
 }
 
+#fix{
+  border:none;
+  background-color: white;
+  font-size: medium;
+  margin-left:15px;
+}
+
 .ad{
   height: fit-content;
   padding: 10px;
